--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
     <img class="ashish" src="images/my.jpg">
     <h3>Next time you're in my Town, give me a ring 📱 for a tour around the city!</h3>
 </div>
-
+<h1>This project is done by Ashish Setiya </h1>
     </html> 
